# SDL2_PONG

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
src/: Define.h  Main.cpp  MainApp.cpp  MainApp.h  PongBall.cpp  PongBall.h  PongLevel.cpp  PongLevel.h  PongPlayer.cpp  PongPlayer.h
src/BaseClasses/: BaseInterface.cpp  BaseInterface.h  BaseSound.cpp  BaseSound.h  BaseUI.cpp  BaseUI.h  BaseUnit.cpp  BaseUnit.h  Environment.cpp  Environment.h  Events.cpp  Events.h  Level.cpp  Level.h  ScrollingBackGround.cpp  ScrollingBackGround.h  SpriteAnimation.cpp  SpriteAnimation.h  SpriteText.cpp  SpriteText.h
src/Renderer/: FrameRateController.cpp  FrameRateController.h  MainRender.cpp  MainRender.h
